--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=127.0.0.1; Port=5432; Database=webapi; User Id=postgres; Password=Darsii17;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
