--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=127.0.0.1; Port=5432; Database=webapi; User Id=postgres; Password=Darsii17;"
+    "DefaultConnection": "Server=127.0.0.1; Port=5432; Database=webapi; User Id=postgres; Password=postgres;"
   },
   "Logging": {
     "LogLevel": {
